Dependencies maintenance