@@ -1,4 +1,4 @@
-FROM gradle:6.7.0-jdk14 AS builder
+FROM gradle:7.1.1-jdk16 AS builder
 WORKDIR /home/gradle/project
 COPY settings.gradle ./
 COPY gradle.properties ./
@@ -6,7 +6,7 @@ COPY build.gradle ./
 COPY src/ ./src/
 RUN gradle test shadowJar --no-daemon --info --gradle-user-home ./
 
-FROM adoptopenjdk:14-jre-hotspot
+FROM adoptopenjdk:16-jre-hotspot
 COPY --from=builder /home/gradle/project/build/libs/*.jar ./mycollections.jar
 EXPOSE 8443
-CMD ["java", "-Dcom.sun.management.jmxremote", "-Xmx256m", "-jar", "mycollections.jar"]
+CMD ["java", "-Dcom.sun.management.jmxremote", "-Xmx256m", "--add-exports", "java.base/sun.security.x509=ALL-UNNAMED", "-jar", "mycollections.jar"]
